Correcting align items center to flex-start

--- a/css/styles.css
+++ b/css/styles.css
@@ -121,7 +121,7 @@ span {
     padding: 1rem 3rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     text-align: left;
   }
 
